--- a/cs26/css/main.css
+++ b/cs26/css/main.css
@@ -31,7 +31,7 @@ ul {
   
   /* Change the link color to #111 (black) on hover */
   li a:hover {
-    background-color: #111;
+    background-color: rgb(0, 0, 0);
   }
 
   .active {
