--- a/ht66/css/main.css
+++ b/ht66/css/main.css
@@ -56,7 +56,10 @@ div.marge {
     padding: 20px;
 }
 
-.inline { display:inline; }
+div.surligne{ 
+    display:inline-block;
+    border : 1px solid black;
+}
 
 div.footer ul{
     list-style-type: none;
@@ -81,5 +84,10 @@ div.footer li a:hover {
 }
 
 div.contact {
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
+    margin-top: 60px;
+    padding: 10px;
+    border: 3px solid rgb(0, 66, 128);
 }
