--- a/ht66/css/main.css
+++ b/ht66/css/main.css
@@ -91,3 +91,14 @@ div.contact {
     padding: 10px;
     border: 3px solid rgb(0, 66, 128);
 }
+div.articles{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 60px;
+    padding: 10px;
+    border: 3px solid rgb(0, 66, 128);
+}
+.tabarticles{
+    margin: auto;
+}
